--- a/templates/jinja2/grades_list.jinja2
+++ b/templates/jinja2/grades_list.jinja2
@@ -1,4 +1,4 @@
-<p class="text-center">Choose your grade and we'll help teach you in a well-rounded way!</p>
+<p class="text-center nomobile">Choose your grade and we'll help teach you in a well-rounded way!</p>
 <div class="accordion" id="grade-list">
     {%- for board in boards %}
         <div class="card" id="gradecard{{board}}">
